# bincbup

./: Cargo.toml  README.md  bincbup.service  bincbup.timer  test.fish
src/: backup.rs  main.rs  mount.rs  utils.rs
