[package]
name = "bincbup"
description = "Btrfs INCremental BackUP - backup subvolumes incrementally"
authors = ["Dror Levin <dror@psybear.com>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/drrlvn/bincbup"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["btrfs", "backup", "snapshot"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
once_cell = "1.10"
