[package]
name = "bincbup"
description = "Btrfs INCremental BackUP - backup subvolumes incrementally"
authors = ["Dror Levin <dror@psybear.com>"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/drrlvn/bincbup"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["btrfs", "backup", "snapshot"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
